# flacpy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: basic_usage.py
flacpy/: __init__.py  _flacpy.pyi  py.typed
src/: flacpy.cpp  flacpy.h  metadata.h
tests/: benchmark.py  test_flacpy.py
