[project]
name = "flacpy"
readme = "README.md"
dynamic = ["version", "description", "authors", "requires-python", "dependencies"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=1.17.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flacpy"]

[tool.setuptools.package-data]
flacpy = ["py.typed", "*.pyi"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true